Bug: 60509 - Difficult to identify meeting invite in a conversation Improve rendering of new conv view. Invites looking better, at least when they're the first msg in the conv. - Move attachments area and info bar (display images link) to top - Resize each IFRAME to fit its content - In ZmMailMsgView::_resetIframeHeight for FF, remove extra call, and remove code that makes it scroll with IFRAME if content is taller than 30000 px - Change Dwt::setVisible to take ID or element, and bail if no element can be found; we should do that with all the Dwt DOM utility methods
http://bugzilla.zimbra.com/show_bug.cgi?id=60509

Copied from Perforce
 Change: 336262

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -594,7 +594,7 @@ INPUT[type="text"].search_input, INPUT[type="text"].search_input-expanded {
 }
 
 /* Container for the header of the message */
-.ZmMailMsgView .InvHeaderTable {
+.InvHeaderTable {
 	@MailInvHeaderLight@
 	border-bottom: 1px solid #999999;
 }
@@ -798,6 +798,12 @@ INPUT[type="text"].search_input, INPUT[type="text"].search_input-expanded {
 /*	text-decoration:underline;*/
 	margin-right:10px;
 	white-space:nowrap;
+}
+
+.ZmMailMsgCapsuleView .attachments {
+	border:		1px solid @AppC@;
+	margin:		5px;
+	padding:	2px;
 }
 
 .ZmConvView2 .ReplyTextarea {
